--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: #1A2A33;
     max-width: 1440px;
+    height: 900px;
     box-sizing: border-box;
     color: #A8BFC9;
     font-family: Outfit;
@@ -10,6 +11,23 @@ body{
     line-height: 20px;
     text-align: center;
     letter-spacing: 1px;
+}
+.restart-game{
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    gap: 24px;
+    justify-content: center;
+    width: 100%;
+    height: 266px;
+    background-color: #1F3641;
+    position:fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 9;
+    align-content: center;
+    display: none;
 }
 .game_area{
     width: 460px;
@@ -79,15 +97,24 @@ button{
     box-shadow: inset 0px -8px 0px #CC8B13;
     border-radius: 15px;
 }
+#button_yellow:hover{
+    background: #FFC860;
+}
 #button_green{
     background: #31C3BD;
     box-shadow: inset 0px -8px 0px #118C87;
     border-radius: 15px;
 }
+#button_green:hover{
+    background: #65E9E4;
+}
 .xoro{
     width: 50%;
     border-radius: 10px;
     background:  #A8BFC9;
+}
+#xoro_o:hover{
+    background:#9797970e;
 }
 .xoro > img{
     width: 32px;
@@ -95,4 +122,168 @@ button{
 }
 #xoro_x{
     background: none;
+}
+#xoro_x:hover{
+    background:#9797970e;
+}
+
+/* Start game */
+.main_flex{
+    width: 460px;
+    height: 623px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 19px;
+    align-items: center;
+    position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); 
+} 
+.start_game_flex_item:first-of-type{
+    height: 52px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.start_game_ifi> img{
+    /* width: 32px; */
+     /* margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%);  */
+}
+.start_game_ifi:nth-of-type(n+2){
+    width: 140px;
+    height: 52px;
+    background: #1F3641;
+    box-shadow: inset 0px -4px 0px #10212A;
+    border-radius: 10px;
+    /* cursor: pointer; */
+    display: flex;
+    flex-direction: row;
+    gap: 13px;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    margin-right: 4%;
+}
+.start_game_ifi:nth-of-type(n+3){
+    background: #A8BFC9;
+    box-shadow: inset 0px -4px 0px #6B8997;
+    border-radius: 10px;
+    width: 52px;
+    height: 52px;
+    align-items: center;
+    cursor: pointer;
+    margin-right: 0;
+}
+.turn_button{
+ 
+}
+.start_game_flex_item:nth-of-type(n+2){
+    display: grid;
+    grid-template-rows: repeat(3,1fr);
+    grid-template-columns:  repeat(3,1fr);
+    justify-content: space-between;
+    gap: 20px;
+}
+.start_game_flex_item:nth-of-type(n+3){
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+    height: 72px;
+}
+.button_scores{
+    font-size: 14px;
+    border-radius: 15px;
+    cursor:auto;
+}
+.grid_item{
+    width: 140px;
+    height: 140px;
+    background: #1F3641;
+    box-shadow: inset 0px -8px 0px #10212A;
+    border-radius: 15px;
+}
+#you_button{
+    background: #31C3BD;
+}
+#ties_button{
+    background: #A8BFC9;
+}
+#cpu_button{
+    background: #F2B137;
+}
+#restart:hover{
+    background: #DBE8ED;
+}
+.button_grey{
+    background: #A8BFC9;
+    box-shadow: inset 0px -4px 0px #6B8997;
+    border-radius: 10px;
+    width: auto;
+    padding: 16px;
+    font-family: Outfit;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+
+}
+.button_yellow{
+    background: #F2B137;
+    box-shadow: inset 0px -4px 0px #CC8B13;
+    border-radius: 10px;
+    width: auto;
+    padding: 16px;
+    font-family: Outfit;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+
+}
+.button_yellow:hover{
+    background: #FFC860;
+}
+.button_grey:hover{
+    background: #DBE8ED;
+}
+h2{
+    font-family: Outfit;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 50px;
+    text-align: center;
+    letter-spacing: 2.5px;
+    text-transform: uppercase;
+    color: #A8BFC9;
+    margin: 0;
+    /* margin-top: 4%; */
+}
+h5{
+    font-family: 'Outfit';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin: 0;
+}
+.win_loss_round{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
 }
