--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: #1A2A33;
     max-width: 1440px;
-    height: 100vh;
+    height: 900px;
     box-sizing: border-box;
     color: #A8BFC9;
     font-family: Outfit;
@@ -81,13 +81,13 @@ button{
     width: 100%;
     font-family: Outfit;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 500;
     font-size: 20px;
-    line-height: 25px;
+    /* line-height: 25px; */
     text-align: center;
     letter-spacing: 1.25px;
     color: #1A2A33;
-    height: 67px;
+    height: 48px;
     text-transform: uppercase;
     cursor: pointer;
     border: none;
@@ -113,9 +113,6 @@ button{
     border-radius: 10px;
     background:  #A8BFC9;
 }
-#xoro_o:hover{
-    /* background:#9797970e; */
-}
 .xoro > img{
     width: 32px;
     height: 32px;
@@ -129,8 +126,8 @@ button{
 
 /* Start game */
 .main_flex{
-    width: 460px;
-    height: 623px;
+    width: 308px;
+    /* height: 623px; */
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -146,14 +143,9 @@ button{
     justify-content: space-between;
     align-items: center;
 }
-
-.start_game_ifi> img{
-    /* width: 32px; */
-     /* margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%);  */
-}
 .start_game_ifi:nth-of-type(n+2){
-    width: 140px;
-    height: 52px;
+    width: 96px;
+    height: 48px;
     background: #1F3641;
     box-shadow: inset 0px -4px 0px #10212A;
     border-radius: 10px;
@@ -170,29 +162,29 @@ button{
     background: #A8BFC9;
     box-shadow: inset 0px -4px 0px #6B8997;
     border-radius: 10px;
-    width: 52px;
-    height: 52px;
+    width: 48px;
+    height: 48px;
     align-items: center;
     cursor: pointer;
     margin-right: 0;
-}
-.turn_button{
- 
 }
 .start_game_flex_item:nth-of-type(n+2){
     display: grid;
     grid-template-rows: repeat(3,1fr);
     grid-template-columns:  repeat(3,1fr);
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
+}
+.start_game_ifi > img{
+    transform: scale(0.75);
 }
 .start_game_flex_item:nth-of-type(n+3){
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 20px;
-    height: 72px;
+    gap: 10px;
+    height: 54px;
 }
 .button_scores{
     font-size: 14px;
@@ -200,8 +192,8 @@ button{
     cursor:auto;
 }
 .grid_item{
-    width: 140px;
-    height: 140px;
+    width: 96px;
+    height: 96px;
     background: #1F3641;
     box-shadow: inset 0px -8px 0px #10212A;
     border-radius: 15px;
@@ -287,43 +279,16 @@ h5{
     align-items: center;
     gap: 16px;
 }
-@media  screen and (min-width:1441px) {
-    /* .main_flex{
-        width: 32%;
-        height: 80vh;
-        gap: 5%;
-    }
-    .start_game_flex_item:first-of-type{
-        height: 81px;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .start_game_flex_item:nth-of-type(n+2) {
-        width: 100%;
-        height: 100%;
-        row-gap: 1.5vh;
-    }
-    .start_game_flex_item:nth-of-type(n+3) {
-        width: 100%;
-        height: 150px;
-    }
-    button{
-        height: 100%;
-    }
-    .grid_item{
-        width: 100%;
-        height: 18.6vh;
-        border-radius: 15%;
-    }
-    .button_scores{
-        font-size: 3em;
-        line-height: 1em;
-    } */
-        
+#o_scores,#ties_scores,#x_scores{
+    font-size: 16px;
+    line-height: 8px;
+    font-weight: bold;
 }
+.image{
+    width: 46px;
+    height: 46px;
+}
+
 @media  screen and (max-width:768px) {
     .main_flex{
         width: 59.897%;
@@ -357,57 +322,16 @@ h5{
         height: 140px;
     }
 }
-@media  screen and (max-width:375px) {
-    .main_flex{
-        width: 91.368%;
-        height: 623px;
-    }
-  
-    .start_game_ifi:nth-of-type(n+3){
-        height: 40px;
-        width: 40px;
-    }
-    .start_game_flex_item:first-of-type{
-        height: 40px;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .start_game_flex_item:nth-of-type(n+2){
-        display: grid;
-        justify-content: space-between;
-        gap: 20px;
-        width: 100%;
-        height: auto;
-    }
-    .start_game_flex_item:nth-of-type(n+3){
-        margin-top: 0;
-        display: grid;
-        justify-content: space-between;
-        grid-template-rows: auto;
-        gap: 20px;
-        height: 64px;
-    }
-    .grid_item{
-        height: 96px;
-    }
-    button{
-        height: 64px;
-    }
-    .image{
-        width: 40px;
-        height: 40px;
-    }
-    .main_flex{
-        position: relative;
-        transform: translate(0,0);
-        top: 0;
-        left: 0;
-    }
-}
+
 @media  screen and (max-width:425px) {
+    h2{
+        font-size: 24px;
+        line-height: normal;
+    }
+    .win_loss_round_item > img{
+        width: 30px;
+        height: 30px;
+    }
     .game_area{
         width: 90%;
         height: 429px;
@@ -436,5 +360,51 @@ h5{
     .image{
         width: 48px;
         height: 48px;    
+    }
+}
+@media  screen and (max-width:375px) {
+    .main_flex{
+        width: 91.368%;
+        height: 623px;
+    }
+  
+    .start_game_ifi:nth-of-type(n+3){
+        height: 40px;
+        width: 40px;
+    }
+    .start_game_flex_item:first-of-type{
+        height: 40px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .start_game_flex_item:nth-of-type(n+2){
+        display: grid;
+        justify-content: space-between;
+        gap: 20px;
+        width: 100%;
+    }
+    .start_game_flex_item:nth-of-type(n+3){
+        margin-top: 0;
+        display: grid;
+        justify-content: space-between;
+        grid-template-rows: auto;
+        gap: 20px;
+        height: 64px;
+    }
+    .grid_item{
+        height: 96px;
+    }
+    .image{
+        width: 40px;
+        height: 40px;
+    }
+    .main_flex{
+        position: relative;
+        transform: translate(0,0);
+        top: 0;
+        left: 0;
     }
 }
