--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -87,7 +87,7 @@ button{
     text-align: center;
     letter-spacing: 1.25px;
     color: #1A2A33;
-    height: 48px;
+    height: 64px;
     text-transform: uppercase;
     cursor: pointer;
     border: none;
@@ -96,6 +96,7 @@ button{
     background: #F2B137;
     box-shadow: inset 0px -8px 0px #CC8B13;
     border-radius: 15px;
+    font-weight: bold;
 }
 #button_yellow:hover{
     background: #FFC860;
@@ -104,6 +105,7 @@ button{
     background: #31C3BD;
     box-shadow: inset 0px -8px 0px #118C87;
     border-radius: 15px;
+    font-weight: bold;
 }
 #button_green:hover{
     background: #65E9E4;
@@ -321,9 +323,18 @@ h5{
         width: 100%;
         height: 140px;
     }
+    button{
+        height: 64px;
+    }
 }
 
 @media  screen and (max-width:425px) {
+    button{
+        height: 56px;
+    }
+    body{
+        height:1024px;
+    }
     h2{
         font-size: 24px;
         line-height: normal;
@@ -363,6 +374,9 @@ h5{
     }
 }
 @media  screen and (max-width:375px) {
+    body{
+        height:667px;
+    }
     .main_flex{
         width: 91.368%;
         height: 623px;
