--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -12,6 +12,58 @@ body{
     text-align: center;
     letter-spacing: 1px;
 }
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dashed #fff;
+    padding: 4px;
+    border-radius: 8px;
+    font-size: small;
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    overflow: auto;
+    visibility: hidden;
+    width: 360px;
+    background-color: rgb(92, 84, 84);
+    color: #fff;
+    text-align: center;
+    padding: 8px;
+    border-radius: 6px;
+  
+    /* Position the tooltip text */
+    position: absolute;
+    z-index: 1;
+    top: 125%;
+    left: 50%;
+    /* margin-left: -60px; */
+  
+    /* Fade in tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  .tooltiptext p{
+    color: #10212A;
+  }
+  
+  /* Tooltip arrow */
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
 .restart-game{
     display: flex;
     justify-items: center;
